# violet_keys

./: .gitignore  Cargo.toml  Makefile  README.md
common/: Cargo.toml  build.rs
common/src/: envelope.rs  lib.rs  secure.rs  secure_error.rs
common/src/proto/: env.proto
