[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "*"
async-trait = "*"
derive_builder = "*"
shaku = "*"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
uuid = { version = "*", features = ["v4", "serde"] }